--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,5 +13,6 @@
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "sqlite3": "^5.1.6"
-  }
+  },
+  "description": ""
 }
